# aligners

./: CMakeLists.txt  Doxyfile  README.md
alignment/: basic_score.hpp  hirschberg.hpp  needleman_wunsch.hpp
tests/: alignment.cpp  needlemanwunsch.cpp
